[project]
name = "langevin_rotation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "danielb", email = "Xared06@gmail.com"},
]
dependencies = [
    "numpy>=1.24.1",
    "scipy>=1.9.1",
    "matplotlib>=3.6.2",
    "h5py>=3.7.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
cpu = ["neuralflow @ git+https://github.com/engellab/BrainFlow.git@percept"]
cuda11x = ["neuralflow[cuda11x] @ git+https://github.com/engellab/BrainFlow.git@percept"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
distribution = false
